[package]
name = "billboard"
version = "0.1.0"
edition = "2021"
description = "BEX Implementation of Billboard Charts"

[dependencies]
bex-core = { path = "bex-core", features = ["chart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:chart-provider"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false