[package]
name = "jiosaavn"
version = "0.1.0"
edition = "2021"
description = "BEX Implementation of JioSaavn"

[dependencies]
bex-core = { path = "bex-core", features = ["resolver"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
des = "0.8.1"
hex = "0.4"
urlencoding = "2.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:content-resolver"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false